kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/istio/patch.dex-jwt.requestauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: dex-jwt
  namespace: istio-system
spec:
  jwtRules:
    - issuer: https://kubeflow.goyangi.cloud/dex
      forwardOriginalToken: true
      outputClaimToHeaders:
        - header: kubeflow-userid
          claim: email
        - header: kubeflow-groups
          claim: groups
      fromHeaders:
        - name: Authorization
          prefix: "Bearer "
