kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/istio/delete.global-deny-all.authorizationpolicy.yaml
$patch: delete
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: istio-system
